--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
 	height: 100%;
 	padding-top: 13vw;
 }
+@media only screen and (max-width: 480px) {
+ 	.block1 {
+ 		background-size: 260%;
+ 		transition: 0.5s;
+ 	}
+ }
 .block2 {
 	background-image: url("images/back3.jpg");
 	background-size: 100%;
@@ -26,6 +32,12 @@ body {
 	height: 100%;
 	padding-top: 13vw;
 }
+@media only screen and (max-width: 480px) {
+ 	.block2 {
+ 		background-size: 260%;
+ 		transition: 0.5s;
+ 	}
+ }
 .block3 {
 	background-image: url("images/back2.jpg");
 	background-size: 100%;
@@ -33,6 +45,12 @@ body {
 	height: 100%;
 	padding-top: 5vw;
 }
+@media only screen and (max-width: 480px) {
+ 	.block3 {
+ 		background-size: 260%;
+ 		transition: 0.5s;
+ 	}
+ }
 .buttons {
 	width: 100%;
 	height: 3.4vw;
@@ -64,6 +82,14 @@ body {
  	.in {
  		height: 6vw;
  		width: 10vw;
+ 		transition: 0.5s;
+ 	}
+ }
+ @media only screen and (max-width: 400px) {
+ 	.in {
+ 		background-size: 95%;
+ 		height: 5.5vw;
+ 		width: 8vw;
  		transition: 0.5s;
  	}
  }
@@ -110,7 +136,7 @@ body {
  		margin-left: 15%;
  		margin-top: 60%;
  		width: 70%;
- 		font-size: 3vw;
+ 		font-size: 3.5vw;
  		transition: 0.5s;
  	}
  }
@@ -125,7 +151,7 @@ body {
 }
 @media only screen and (max-width: 480px) {
  	.head {
- 		font-size: 4vw;
+ 		font-size: 4.5vw;
  		width: 90%;
  		transition: 0.5s;
  	}
@@ -163,7 +189,7 @@ body {
  }
 @media only screen and (max-width: 480px) {
  	.row {
- 		margin-top: 12%;
+ 		margin-top: 10%;
  		height: 6vw;
  		background-size: 55%;
  		transition: 0.5s;
@@ -184,8 +210,8 @@ body {
 @media only screen and (max-width: 480px) {
  	.sbtn {
  		margin-left: 2vw;
- 		margin-top: 45%;
- 		height: 10vw;
+ 		margin-top: 40%;
+ 		height: 20vw;
  		width: 4%;
  		transition: 0.5s;
  	}
@@ -201,25 +227,35 @@ body {
 }
 @media only screen and (max-width: 480px) {
  	.sbtn a{
- 		margin-top: 2vw;
- 		height: 2vw;
- 		width: 2vw;
+ 		border-radius: 2vw;
+ 		margin-top: 3vw;
+ 		height: 3vw;
+ 		width: 3vw;
  		transition: 0.5s;
  	}
  }
 .sbtn li {
 	list-style: none;
 }
-.logo-main {
+.logo {
 	display: block;
-	width: 13vw;
-	height: 1.7vw;
+	width: 45%;
+	height: 90%;
 	background-image: url("images/logo.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	float: left;
-	margin-left: -65vw;
+	margin-left: -220%;
 }
+@media only screen and (max-width: 480px) {
+ 	.logo {
+ 		margin-top: 8%;
+ 		width: 30%;
+ 		height: 80%;
+ 		margin-left: -50%;
+ 		transition: 0.5s;
+ 	}
+ }
 .img1 {
 	position: absolute;
 	display: block;
@@ -261,13 +297,11 @@ body {
  	}
  }
 .img1:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .img2:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .img1:hover .message {
@@ -315,7 +349,8 @@ body {
  }
 @media only screen and (max-width: 480px) {
  	.message {
- 		margin-left: 0;
+ 		margin-left: 25%;
+ 		font-size: 2.5vw;
  		transition: 0.5s;
  	}
  }
@@ -354,7 +389,8 @@ body {
  }
 @media only screen and (max-width: 480px) {
  	 .message1 {
- 		margin-left: 0;
+ 		margin-left: 30%;
+ 		font-size: 2.5vw;
  		transition: 0.5s;
  	}
  }
@@ -389,7 +425,7 @@ body {
  		transition: 0.5s;
  	}
  }
-.registrationFormSwitchButtons a{
+.registrationFormSwitchButtons label{
 	float: left;
 	width: 39%;
 }
