--- a/stylecab.css
+++ b/stylecab.css
@@ -4,7 +4,7 @@
 	padding: 0;
 }
 body {
-	background-image: url("images/back1.jpg");
+	background-color: #44CBC6;
 }
 .room {
 	z-index: 10;
@@ -26,7 +26,7 @@ body {
 	background-size: 100%;
 	background-repeat: no-repeat;
 	float: left;
-	margin-left: 2%;
+	margin-left: 10%;
 	margin-top: 1%;
 }
 .title {
@@ -35,7 +35,7 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 3vw;
-	margin-right: 2%;
+	margin-right: 45%;
 }
 .form li{
 	list-style: none;
@@ -101,12 +101,12 @@ body {
 	display: block;
 	width: 23%;
 	height: 25%;
-	margin-left: 60%;
+	margin-left: 62%;
 	margin-top: 9%;
 	color: #FFFFFF;
-	font-size: 1.3vw;
+	font-size: 1vw;
 	font-family: Comic Sans Ms;
-	padding: 2%;
+	padding: 1%;
 }
 .board:hover {
 	transform: scale(1.1, 1.1);
@@ -327,4 +327,48 @@ body {
 	cursor: pointer;
 	background-color: #00CED1;
 	transition: 0.5s;
+}
+.exit {
+	position: absolute;
+	display: : block;
+	width: 10%;
+	height: 7%;
+	border-radius: 0.2vw;
+	background-image: url("images/exit.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	margin-top: 2%;
+	margin-left: 72%;
+}
+.exit:hover {
+	background-image: url("images/exith.jpg");
+	transition: 0.4s;
+}
+.exit:active {
+	background-image: url("images/exita.jpg");
+}
+#map {
+	width: 100%;
+	height: 41vw;
+	border-bottom-right-radius: 1vw;
+	border-bottom-left-radius: 1vw;
+}
+#title {
+	color: #696969;
+	font-family: Comic Sans Ms;
+	font-size: 1.7vw;
+	margin-left: 40%;
+}
+.noutscreen {
+	margin-left: -500%;
+	z-index: 50;
+	display: block;
+	width: 69%;
+	height: 44.2vw;
+	background-color: #F5F5F5;
+	border-radius: 1vw;
+	position: absolute;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
 }
