--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ body {
 	width: 65%;
 	height: 0.8vw;
 	margin-left: 17.5%;
-	margin-top: -0.4vw;
+	margin-top: 15%;
 }
 @media only screen and (max-width: 480px) {
  	.orline {
