--- a/stylecab.css
+++ b/stylecab.css
@@ -29,13 +29,27 @@ body {
 	margin-left: 10%;
 	margin-top: 1%;
 }
+.support {
+	position: absolute;
+	text-decoration: none;
+	display: block;
+	color: white;
+	font-family: Comic Sans Ms;
+	font-size: 1vw;
+	margin-left: 41%;
+	margin-top: 1%;
+}
+.support:hover {
+	color: crimson;
+	transition: 0.3s;
+}
 .title {
 	display: block;
 	float: right;
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 3vw;
-	margin-right: 45%;
+	margin-right: 8%;
 }
 .form li{
 	list-style: none;
@@ -107,6 +121,7 @@ body {
 	font-size: 1vw;
 	font-family: Comic Sans Ms;
 	padding: 1%;
+	overflow: hidden;
 }
 .board:hover {
 	transform: scale(1.1, 1.1);
@@ -184,7 +199,7 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 2vw;
-	margin-top: 40%;
+	margin-top: 34%;
 	margin-left: 1%;
 }
 .help:hover {
@@ -202,7 +217,7 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 1.5vw;
-	margin-top: 32%;
+	margin-top: 26%;
 	left: -1%;
 	text-decoration: none;
 }
@@ -283,6 +298,10 @@ body {
 	border: 0.1vw solid #66CDAA;
 	border-radius: 0.2vw;
 }
+.slider li img:hover {
+	transform: scale(1.2, 1.2);
+	transition: 0.5s;
+}
 .slider li p {
 	text-align: left;
 	margin-top: 5%;
@@ -331,14 +350,14 @@ body {
 .exit {
 	position: absolute;
 	display: : block;
-	width: 10%;
-	height: 7%;
-	border-radius: 0.2vw;
+	width: 9%;
+	height: 3vw;
+	border-radius: 0.8vw;
 	background-image: url("images/exit.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
-	margin-top: 2%;
-	margin-left: 72%;
+	margin-top: 43%;
+	margin-left: 1%;
 }
 .exit:hover {
 	background-image: url("images/exith.jpg");
@@ -371,4 +390,261 @@ body {
 	transition: 0.5s;
 	margin-top: 3%;
 	border: 0.4vw solid gray;
+}
+.mesform {
+	z-index: 60;
+	text-align: left;
+	display: block;
+	width: 50%;
+	height: 20vw;
+	background-color: white;
+	border-radius: 1vw;
+	position: absolute;
+	margin-left: -500%;
+	transition: 0.5s;
+	margin-top: 10%;
+	font-family: Comic Sans Ms;
+	font-size: 1.5vw;
+	color: black;
+	padding: 1%;
+}
+.out1 {
+	z-index: 60;
+	display: block;
+	height: 6%;
+	width: 3%;
+	background-image: url("images/regbtnp.png");
+	background-repeat: no-repeat;
+	background-size: 99%;
+	position: absolute;
+	margin-top: 7.5%;
+	margin-left: -500%;
+	transition: 0.5s;
+}
+.out1:hover {
+	background-image: url("images/regbtnh.png");
+	transition: 0.4s;
+}
+.out1:active {
+	background-image: url("images/regbtna.png");
+}
+.mom {
+	display: block;
+	position: absolute;
+	width: 15%;
+	height: 31vw;
+	background-image: url("images/mom.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	margin-left: -500%;
+	margin-top: 17%;
+	z-index: 70;
+	transition: 2s;
+	transition-delay: 3s;
+}
+.talk {
+	position: absolute;
+	display: block;
+	width: 170%;
+	background-color: white;
+	border-radius: 1vw;
+	margin-left: 80%;
+	border: 0.1vw solid gray;
+	color: black;
+	font-size: 1.1vw;
+	font-family: Comic Sans Ms;
+	padding: 2%;
+	transition: 0.5s;
+	transition-delay: 1s;
+}
+.dad {
+	display: block;
+	position: absolute;
+	width: 15%;
+	height: 33vw;
+	background-image: url("images/dad.png");
+	background-size: 65%;
+	background-repeat: no-repeat;
+	margin-left: -500%;
+	margin-top: 14%;
+	z-index: 70;
+	transition: 2s;
+}
+.talk1 {
+	position: absolute;
+	display: block;
+	width: 170%;
+	background-color: white;
+	border-radius: 1vw;
+	margin-left: 40%;
+	border: 0.1vw solid gray;
+	color: black;
+	font-size: 1.1vw;
+	font-family: Comic Sans Ms;
+	padding: 2%;
+	opacity: 0;
+	transition: 0.5s opacity;
+	transition-delay: 2s;
+}
+.back {
+	display: block;
+	position: absolute;
+	padding-left: 1vw;
+	padding-right: 1vw;
+	background-color: #B61111;
+	border-radius: 0.8vw;
+	text-align: center;
+	color: white;
+	font-family: Century Gothic;
+	font-size: 2.3vw;
+	margin-left: 1%;
+	margin-top: 38.5%;
+}
+.back:hover {
+	cursor: pointer;
+	background-color: #A31010;
+	transition: 0.5s;
+}
+.back:active {
+	background-color: #730A0A;
+}
+.znoscreen {
+	margin-left: -500%;
+	z-index: 50;
+	display: block;
+	width: 69%;
+	height: 44.2vw;
+	background-color: #F5F5F5;
+	border-radius: 1vw;
+	position: absolute;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
+	text-align: center;
+	overflow: hidden;
+}
+.znoscreen h3 {
+	color: #696969;
+	font-size: 2vw;
+	font-family: Century Gothic;
+	margin-top: 1%;
+}
+.znoscreen p {
+	margin-left: 15%;
+	margin-right: 15%;
+	width: 70%;
+	color: #696969;
+	font-size: 1.2vw;
+	font-family: Century Gothic;
+	margin-top: 1%;
+}
+.znoscreen li{
+	width: 18%;
+	margin-top: 1%;
+	margin-right: 2%;
+	height: 99%;
+	list-style: none;
+	float: left;
+	border: 0.1vw solid #70230F;
+	padding-top: 5%;
+	padding-left: 1%;
+	padding-right: 1%;
+	border-top-right-radius: 0.3vw;
+	border-top-left-radius: 0.3vw;
+}
+.bookshelf {
+	width: 100%;
+	height: 77%;
+	background-color: #C1573E;
+	margin-top: 1%;
+	border-bottom: 2vw solid #70230F;
+}
+#book1 {
+	margin-left: 1%;
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book5 {
+	margin-right: 1%;
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book2 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book3 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book4 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.znoscreen a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-decoration: none;
+	font-size: 1.4vw;
+	color: white;
+	font-family: Verdana;
+}
+.znoscreen a:hover {
+	color: #FFFF00;
+	transition: 0.3s;
+}
+#dialog {
+	text-align: center;
+}
+#image {
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 1%;
+	border-radius: 0.5vw;
+}
+#name {
+	margin-top: 1%;
+	color: dimgray;
+	font-size: 1.5vw;
+	font-family: Verdana;
+}
+#description {
+	margin-top: 1%;
+	display: block;
+	text-align: left;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	color: dimgray;
+	font-size: 1.1vw;
+	font-family: Century Gothic;
+}
+.vnzbtn {
+	width: 20%;
+	margin-left: 2%;
+	margin-top: 1.5%;
+	height: 3vw;
+	color: white;
+	background-color: #B61111; 
+	border: none;
+	border-radius: 0.5vw;
+	font-size: 1.3vw;
+	font-family: Arial;
+}
+.vnzbtn:hover {
+	cursor: pointer;
+	background-color: #A31010;
+	transition: 0.5s;
+}
+.vnzbtn:active {
+	background-color: #730A0A;
+	border: none;
+	outline: none;
 }
