--- a/stylecab.css
+++ b/stylecab.css
@@ -4,7 +4,7 @@
 	padding: 0;
 }
 body {
-	background-image: url("images/back1.jpg");
+	background-color: #44CBC6;
 }
 .room {
 	z-index: 10;
@@ -26,8 +26,22 @@ body {
 	background-size: 100%;
 	background-repeat: no-repeat;
 	float: left;
-	margin-left: 2%;
+	margin-left: 10%;
 	margin-top: 1%;
+}
+.support {
+	position: absolute;
+	text-decoration: none;
+	display: block;
+	color: white;
+	font-family: Comic Sans Ms;
+	font-size: 1vw;
+	margin-left: 41%;
+	margin-top: 1%;
+}
+.support:hover {
+	color: crimson;
+	transition: 0.3s;
 }
 .title {
 	display: block;
@@ -35,7 +49,7 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 3vw;
-	margin-right: 2%;
+	margin-right: 8%;
 }
 .form li{
 	list-style: none;
@@ -51,18 +65,17 @@ body {
 }
 .form li img {
 	width: 12%;
-	height: 17%;
 	border-radius: 0.5vw;
 	float: left;
 	margin-right: 2%;
 }
 .form li img:hover {
-	-webkit-transform: scale(1.5, 1.5);
-	        transform: scale(1.5, 1.5);
+	transform: scale(1.5, 1.5);
 	transition: 0.5s;
 }
 .form {
 	z-index: 50;
+	text-align: left;
 	display: block;
 	width: 60%;
 	height: 41vw;
@@ -102,12 +115,16 @@ body {
 	display: block;
 	width: 23%;
 	height: 25%;
-	margin-left: 60%;
+	margin-left: 62%;
 	margin-top: 9%;
+	color: #FFFFFF;
+	font-size: 1vw;
+	font-family: Comic Sans Ms;
+	padding: 1%;
+	overflow: hidden;
 }
 .board:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .comp {
@@ -123,8 +140,7 @@ body {
 	margin-top: 26%;
 }
 .comp:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .laptop {
@@ -140,8 +156,7 @@ body {
 	margin-top: 32%;
 }
 .laptop:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .zno {
@@ -157,8 +172,7 @@ body {
 	margin-top: 9%;
 }
 .zno:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .bag {
@@ -174,8 +188,7 @@ body {
 	margin-top: 43%;
 }
 .bag:hover {
-	-webkit-transform: scale(1.1, 1.1);
-	        transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
 	transition: 0.5s;
 }
 .help {
@@ -186,7 +199,7 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 2vw;
-	margin-top: 40%;
+	margin-top: 34%;
 	margin-left: 1%;
 }
 .help:hover {
@@ -204,11 +217,434 @@ body {
 	color: white;
 	font-family: Comic Sans Ms;
 	font-size: 1.5vw;
-	margin-top: 32%;
+	margin-top: 26%;
 	left: -1%;
 	text-decoration: none;
 }
 .link:hover {
 	color: #F08080;
 	transition: 0.3s;
+}
+.compscreen {
+	z-index: 50;
+	display: block;
+	width: 69%;
+	height: 43.5vw;
+	background-image: url("images/compback.jpg");
+	background-repeat: no-repeat;
+	background-color: #191970;
+	background-size: 100%;
+	border-radius: 1vw;
+	position: absolute;
+	margin-left: -500%;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
+	overflow: hidden;
+}
+.slider {
+	margin-left: 15%;
+	margin-right: 15%;
+	margin-top: 2%;
+	width: 70%;
+	height: 90%;
+	background-color: white;
+	border: 0.1vw solid #87CEFA;
+	border-radius: 0.4vw;
+	overflow: hidden;
+	padding: 4%;
+	padding-top: 1%;
+	background-color: #E0FFFF;
+}
+.prof2 {
+	margin-top: -500%;
+	opacity: 0;
+	transform: scale(0.1, 0.1);
+	transition: 0.5s transform, 0.9s opacity;
+}
+.prof3 {
+	margin-top: -500%;
+	opacity: 0;
+	transform: scale(0.1, 0.1);
+	transition: 0.5s transform, 0.9s opacity;
+}
+.prof1 {
+	opacity: 1;
+	transition: 0.5s transform, 0.9s opacity;
+}
+#next2 {
+	margin-left: -500%;
+}
+#next3 {
+	margin-left: -500%;
+}
+.slider li {
+	position: absolute;
+	list-style: none;
+	text-align: center;
+	width: 50%;
+	height: 77%;
+	margin-left: 6%;
+	margin-right: 10%;
+	border: 0.1vw solid #66CDAA;
+	border-radius: 0.2vw;
+	padding: 2%;
+}
+.slider li img {
+	width: 85%;
+	height: 50%;
+	margin-left: 5%
+	margin-right: 5%;
+	border: 0.1vw solid #66CDAA;
+	border-radius: 0.2vw;
+}
+.slider li img:hover {
+	transform: scale(1.2, 1.2);
+	transition: 0.5s;
+}
+.slider li p {
+	text-align: left;
+	margin-top: 5%;
+	color: black;
+	font-size: 1.2vw;
+	font-family: Century Gothic;
+}
+.choose {
+	display: block;
+	width: 40%;
+	height: 8%;
+	background-color: #66CDAA;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Verdana;
+	font-size: 1.2vw;
+	border-radius: 0.4vw;
+	padding: 2%;
+}
+.next {
+	position: absolute;
+	text-decoration: none;
+	display: block;
+	width: 21%;
+	background-color: #66CDAA;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Verdana;
+	font-size: 1.2vw;
+	border-radius: 0.4vw;
+	padding: 1%;
+	margin-left: 39%;
+	top: 84%;
+}
+.menu {
+	margin-top: 4%;	
+}
+.menu ul {
+	margin-left: 28%;
+}
+.menu ul:hover {
+	cursor: pointer;
+	background-color: #00CED1;
+	transition: 0.5s;
+}
+.exit {
+	position: absolute;
+	display: : block;
+	width: 9%;
+	height: 3vw;
+	border-radius: 0.8vw;
+	background-image: url("images/exit.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	margin-top: 43%;
+	margin-left: 1%;
+}
+.exit:hover {
+	background-image: url("images/exith.jpg");
+	transition: 0.4s;
+}
+.exit:active {
+	background-image: url("images/exita.jpg");
+}
+#map {
+	width: 100%;
+	height: 41vw;
+	border-bottom-right-radius: 1vw;
+	border-bottom-left-radius: 1vw;
+}
+#title {
+	color: #696969;
+	font-family: Comic Sans Ms;
+	font-size: 1.7vw;
+	margin-left: 40%;
+}
+.noutscreen {
+	margin-left: -500%;
+	z-index: 50;
+	display: block;
+	width: 69%;
+	height: 44.2vw;
+	background-color: #F5F5F5;
+	border-radius: 1vw;
+	position: absolute;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
+}
+.mesform {
+	z-index: 60;
+	text-align: left;
+	display: block;
+	width: 50%;
+	height: 20vw;
+	background-color: white;
+	border-radius: 1vw;
+	position: absolute;
+	margin-left: -500%;
+	transition: 0.5s;
+	margin-top: 10%;
+	font-family: Comic Sans Ms;
+	font-size: 1.5vw;
+	color: black;
+	padding: 1%;
+}
+.out1 {
+	z-index: 60;
+	display: block;
+	height: 6%;
+	width: 3%;
+	background-image: url("images/regbtnp.png");
+	background-repeat: no-repeat;
+	background-size: 99%;
+	position: absolute;
+	margin-top: 7.5%;
+	margin-left: -500%;
+	transition: 0.5s;
+}
+.out1:hover {
+	background-image: url("images/regbtnh.png");
+	transition: 0.4s;
+}
+.out1:active {
+	background-image: url("images/regbtna.png");
+}
+.mom {
+	display: block;
+	position: absolute;
+	width: 15%;
+	height: 31vw;
+	background-image: url("images/mom.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	margin-left: -500%;
+	margin-top: 17%;
+	z-index: 70;
+	transition: 2s;
+	transition-delay: 3s;
+}
+.talk {
+	position: absolute;
+	display: block;
+	width: 170%;
+	background-color: white;
+	border-radius: 1vw;
+	margin-left: 80%;
+	border: 0.1vw solid gray;
+	color: black;
+	font-size: 1.1vw;
+	font-family: Comic Sans Ms;
+	padding: 2%;
+	transition: 0.5s;
+	transition-delay: 1s;
+}
+.dad {
+	display: block;
+	position: absolute;
+	width: 15%;
+	height: 33vw;
+	background-image: url("images/dad.png");
+	background-size: 65%;
+	background-repeat: no-repeat;
+	margin-left: -500%;
+	margin-top: 14%;
+	z-index: 70;
+	transition: 2s;
+}
+.talk1 {
+	position: absolute;
+	display: block;
+	width: 170%;
+	background-color: white;
+	border-radius: 1vw;
+	margin-left: 40%;
+	border: 0.1vw solid gray;
+	color: black;
+	font-size: 1.1vw;
+	font-family: Comic Sans Ms;
+	padding: 2%;
+	opacity: 0;
+	transition: 0.5s opacity;
+	transition-delay: 2s;
+}
+.back {
+	display: block;
+	position: absolute;
+	padding-left: 1vw;
+	padding-right: 1vw;
+	background-color: #B61111;
+	border-radius: 0.8vw;
+	text-align: center;
+	color: white;
+	font-family: Century Gothic;
+	font-size: 2.3vw;
+	margin-left: 1%;
+	margin-top: 38.5%;
+}
+.back:hover {
+	cursor: pointer;
+	background-color: #A31010;
+	transition: 0.5s;
+}
+.back:active {
+	background-color: #730A0A;
+}
+.znoscreen {
+	margin-left: -500%;
+	z-index: 50;
+	display: block;
+	width: 69%;
+	height: 44.2vw;
+	background-color: #F5F5F5;
+	border-radius: 1vw;
+	position: absolute;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
+	text-align: center;
+	overflow: hidden;
+}
+.znoscreen h3 {
+	color: #696969;
+	font-size: 2vw;
+	font-family: Century Gothic;
+	margin-top: 1%;
+}
+.znoscreen p {
+	margin-left: 15%;
+	margin-right: 15%;
+	width: 70%;
+	color: #696969;
+	font-size: 1.2vw;
+	font-family: Century Gothic;
+	margin-top: 1%;
+}
+.znoscreen li{
+	width: 18%;
+	margin-top: 1%;
+	margin-right: 2%;
+	height: 99%;
+	list-style: none;
+	float: left;
+	border: 0.1vw solid #70230F;
+	padding-top: 5%;
+	padding-left: 1%;
+	padding-right: 1%;
+	border-top-right-radius: 0.3vw;
+	border-top-left-radius: 0.3vw;
+}
+.bookshelf {
+	width: 100%;
+	height: 77%;
+	background-color: #C1573E;
+	margin-top: 1%;
+	border-bottom: 2vw solid #70230F;
+}
+#book1 {
+	margin-left: 1%;
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book5 {
+	margin-right: 1%;
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book2 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book3 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+#book4 {
+	background-image: url(images/book5.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.znoscreen a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-decoration: none;
+	font-size: 1.4vw;
+	color: white;
+	font-family: Verdana;
+}
+.znoscreen a:hover {
+	color: #FFFF00;
+	transition: 0.3s;
+}
+#dialog {
+	text-align: center;
+}
+#image {
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 1%;
+	border-radius: 0.5vw;
+}
+#name {
+	margin-top: 1%;
+	color: dimgray;
+	font-size: 1.5vw;
+	font-family: Verdana;
+}
+#description {
+	margin-top: 1%;
+	display: block;
+	text-align: left;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	color: dimgray;
+	font-size: 1.1vw;
+	font-family: Century Gothic;
+}
+.vnzbtn {
+	width: 20%;
+	margin-left: 2%;
+	margin-top: 1.5%;
+	height: 3vw;
+	color: white;
+	background-color: #B61111; 
+	border: none;
+	border-radius: 0.5vw;
+	font-size: 1.3vw;
+	font-family: Arial;
+}
+.vnzbtn:hover {
+	cursor: pointer;
+	background-color: #A31010;
+	transition: 0.5s;
+}
+.vnzbtn:active {
+	background-color: #730A0A;
+	border: none;
+	outline: none;
 }
