--- a/stylecab.css
+++ b/stylecab.css
@@ -4,7 +4,7 @@
 	padding: 0;
 }
 body {
-	background-color: #44CBC6;
+	background-color: #44CBC6 !important;
 }
 .room {
 	z-index: 10;
@@ -348,23 +348,25 @@ body {
 	transition: 0.5s;
 }
 .exit {
+	display: block;
 	position: absolute;
-	display: : block;
-	width: 9%;
-	height: 3vw;
+	padding-left: 1.6vw;
+	padding-right: 1.6vw;
+	background-color: #B61111;
 	border-radius: 0.8vw;
-	background-image: url("images/exit.jpg");
-	background-repeat: no-repeat;
-	background-size: 100%;
+	text-align: center;
+	color: white;
+	font-family: Century Gothic;
+	font-size: 2.3vw;
 	margin-top: 43%;
 	margin-left: 1%;
 }
 .exit:hover {
-	background-image: url("images/exith.jpg");
+	background-color: #A31010;
 	transition: 0.4s;
 }
 .exit:active {
-	background-image: url("images/exita.jpg");
+	background-color: #730A0A;
 }
 #map {
 	width: 100%;
@@ -647,4 +649,56 @@ body {
 	background-color: #730A0A;
 	border: none;
 	outline: none;
+}
+.bagscreen {
+	margin-left: -500%;
+	z-index: 50;
+	display: block;
+	width: 30%;
+	height: 35vw;
+	background-color: #F5F5F5;
+	border-radius: 1vw;
+	position: absolute;
+	transition: 0.5s;
+	margin-top: 3%;
+	border: 0.4vw solid gray;
+	text-align: center;
+	overflow: hidden;
+	text-align: center;
+}
+.bagscreen li {
+	width: 96%;
+	margin-left: 2%;
+	margin-right: 2%;
+	height: 3vw;
+	background-color: #87CEFA;
+	text-align: left;
+	border-radius: 0.4vw;
+	float: bottom;
+	margin-top: 2%;
+	list-style: none;
+	padding-top: 2%;
+	padding-left: 2%;
+}
+.bagscreen a {
+	text-decoration: none;
+	color: white;
+	display: block;
+	width: 100%;
+	height: 100%;
+	font-size: 1.5vw;
+	font-family: Verdana;
+}
+.bagscreen li:hover {
+	background-color: #00BFFF;
+	transition: 0.4s;
+}
+.quest {
+	color: white;
+	font-size: 1.3vw;
+	font-family: Verdana;
+}
+#tovnz {
+	z-index: 70;
+	margin-left: -500%;
 }
