--- a/style_quest.css
+++ b/style_quest.css
@@ -11,7 +11,8 @@ body {
 	margin-top: 6%;
 	margin-left: 17%;
 	margin-right: 3%;
-	background-image: url("images/table.png");
+	background-image: url("images/table-min.jpg");
+	background-size: 100%;
 	width: 80%;
 	height: 43vw;
 	border-radius: 1vw;
